--- a/index.html
+++ b/index.html
@@ -78,15 +78,6 @@ let 论述 = [
     '想要了解主题，关键是主题该怎么理解。 ',
     '小编觉得，抓住了问题的关键，其他一切则会迎刃而解。 ',
     '问题的关键究竟是什么呢？ ',
-    '既然如此',
-    '那么',
-    '小编认为',
-    '一般来说',
-    '总结的来说',
-    '无论如何',
-    '经过上述讨论',
-    '这样看来',
-    '从这个角度来看',
     '依此看来，主题的出现说明了一些问题。 ',
     '对我小编而言，主题不仅仅是一个重大的事件，还可能会改变小编的人生。 ',
 	'一说到主题，大家就会想到很多事情。 ',
@@ -100,15 +91,15 @@ let 论述 = [
 	'对于我们普通人来说，主题意味着什么呢？ ',
 	'主题意味着， ',
 	'今天小编给大家科普一下， ',
-	'这不禁令小编深思。',
-    '带着这句话，我们还要更加慎重的审视这个问题。',
-    '这启发了小编，',
-    '小编希望大家也能好好地体会哦。',
-    '这似乎解答了小编的疑惑。',
-	'这让小编明白，',
-	'小编恍然大悟，',
-	'小编终于想到，',
-	'小编陷入了沉思，',
+	'这不禁令小编深思。 ',
+    '带着这句话，我们还要更加慎重的审视这个问题。 ',
+    '这启发了小编。 ',
+    '小编希望大家也能好好地体会哦。 ',
+    '这似乎解答了小编的疑惑。 ',
+	'这让小编明白， ',
+	'小编恍然大悟， ',
+	'小编终于想到， ',
+	'小编陷入了沉思。 ',
 	
 ]
 
@@ -118,19 +109,27 @@ let 名人名言 = [
 ]
 
 let 后面垫话 = [
-    '这不禁令小编深思。',
+    '这不禁令小编深思',
     '带着这句话，我们还要更加慎重的审视这个问题',
-    '这启发了小编，',
-    '小编希望大家也能好好地体会哦。',
-    '这似乎解答了小编的疑惑。',
-	'这让小编明白，',
-	'小编恍然大悟，',
-	'小编终于想到，',
-	'小编陷入了沉思，',
+    '这启发了小编',
+    '小编希望大家也能好好地体会哦',
+    '这似乎解答了小编的疑惑',
+	'这让小编明白',
+	'小编恍然大悟',
+	'小编终于想到',
+	'小编陷入了沉思',
 ]
 
 let 前面垫话 = [
-    '',
+    '既然如此',
+    '那么',
+    '小编认为',
+    '一般来说',
+    '总结的来说',
+    '无论如何',
+    '经过上述讨论',
+    '这样看来',
+    '从这个角度来看',
 ]
 
 let 初始主题 = [
@@ -230,7 +229,7 @@ function 生成文章(){
     let 文章 = []
     let 段落 = '';
     let 文章长度 = 0;
-    while( 文章长度 < 500 ){
+    while( 文章长度 < 360 ){
         let 随机数 = 随便取一个数();
         if(随机数 < 20 && 段落.length > 5){
             段落 = 增加段落(段落);
